kubernetes/gateway/istio_servicemes_gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: chatapp-gateway
  namespace: istio-system  # optional: place in the namespace where your ingressgateway lives or where you reference this Gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
