kubernetes/gateway/routeistio.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chatapp-route
  namespace: chatapp-gateway
spec:
  parentRefs:
  - name: external-gateway
    namespace: istio-system 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      namespace: frontend-namespace
      port: 8080
